Modificaciones del video 25

--- a/CursoSpring/pom.xml
+++ b/CursoSpring/pom.xml
@@ -47,12 +47,11 @@
 			</exclusions>
 		</dependency>
 
-		<dependecy>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jdbc</artifactId>
-		</dependecy>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-jdbc</artifactId>
+	</dependency>
 
-		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
