Modificaciones el video 27

--- a/CursoSpring/src/main/resources/application.properties
+++ b/CursoSpring/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.thymeleaf.cache=true
-server.port=80
+server.port=8080
 
 loggin.path=/file/log/
 logging.register-shutdown-hook=true
 
+cursospring.jdbc.import=false
+cursospring.jdbc.import.ruta=src/main/resources/import.sql
